# VulnParse-Pin

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: docs-pages.yml  re_build.yml  release.yml
classes/: dataclass.py
config/: nvd_config.yaml  scoring.json
docs/: Installation.md  Known Limitations.md  Overview.md  Performance Optimizations.md  Usage.md  Value_Proof_Analysis.md  Value_Proposition_One_Pager.md  mkdocs.yml
documentation/: mkdocs.yml
documentation/docs/: ACI Feature Explanation.md  ACI Rule Authoring Tutorial.md  ACI Technical Deep Dive.md  ADR Workflow.md  Architecture Review Checklist.md  Architecture.md  Benchmarks.md  CVSS_vs_VulnParse_Scoring_Comparison.md  Caching Deep Dive.md  Config Seam Contract.md  Configs.md  Deprecation and Versioning Policy.md  Detection and Parsing.md  Enrichment Deep Dive.md  Enrichment Seam Contract.md  Extension Playbooks.md  Features.md  Getting Started In 5 Minutes.md  Identity Contract.md  Known Limitations.md  Licensing.md  Mission Statement.md  Nmap Context Deep Dive.md  Output Interpretation.md  Overview.md  Pass Phases.md  Performance Optimizations.md  Pipeline System.md  Presentation Overlays.md  RunManifest.md  Runtime Policy Deep Dive.md  ScanResult_Schema.md  Scoring and Prioritization Deep Dive.md  Security Features.md  Testing Guide.md  Threat Model.md  Troubleshooting.md  Upgrade and Migration.md  Usage.md  Why VulnParse-Pin Exists.md  (+1 more)
documentation/docs/adr/: ADR-0001-config-seam.md  ADR-0002-enrichment-seam.md  ADR-Template.md
parsers/: __init__.py  base_parser.py  nessusXML_parser.py  nessus_parser.py  openvasXML_parser.py  openvas_parser.py
samples/nessus/: nessus.7z
samples/openvas/: openvas.7z
src/vulnparse_pin/: __init__.py  main.py
src/vulnparse_pin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vulnparse_pin/app/: bootstrap.py  enrichment.py  enrichment_handoff.py  enrichment_source_loader.py  index_builder.py  (+4 more)
tests/: _gen_demo_xml.py  conftest_fixtures_gen.py  debug_topn.py  generate_250k_nessus.py  generate_50k_nessus.py  generate_5k_nessus.py  generate_massive_nessus.py  generate_openvas_nmap_scaled.py  test_aci_default_config_harness.py  test_aci_pass.py  test_aci_phrase_benchmark.py  test_cli_flags_matrix.py  test_config_schema_validation.py  test_csv_sanitization.py  test_enrichment_confidence_policy.py  test_enrichment_handoff.py  test_exploit_db_offline_import.py  test_exploit_references_shape.py  test_ghsa_enrichment.py  test_markdown_report.py  test_nessus_csv_parser.py  test_nessus_parser.py  test_nmap_adapter_pass.py  test_nvd_optimization.py  test_omp_normalizer.py  test_openvas_edge_cases.py  test_openvas_parser.py  test_openvas_parser_fallbacks.py  test_openvas_port_protocol_fallbacks.py  test_openvas_title_description_fallbacks.py  test_parallel_scoring.py  test_parser_smoke.py  test_pass_contracts.py  test_pfh.py  test_qualys_csv_parser.py  test_qualys_parser.py  test_runmanifest.py  test_scanresult_schema_validation.py  test_schema_detector.py  test_security_hardening.py  (+8 more)
utils/: config_loader.py  csv_exporter.py  cvss_utils.py  detect_parsers.py  enricher.py  enrichment_stats.py  exploit_enrichment_service.py  logger.py  normalizer.py  nvdcacher.py  triage_priority_helper.py  validations.py
(+77 files in other folders)
